--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -2,6 +2,7 @@
 @import 'variables';
 @import 'header';
 @import 'experience';
+@import 'portofolio';
 
 // Bootstrap
 @import '~admin-lte/build/scss/adminlte';
